--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,8 @@
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
+/go.sum
+/.idea/modules.xml
+/.idea/objpool.iml
+/.idea/vcs.xml
+/.idea/workspace.xml
